--- a/movieIndex.html
+++ b/movieIndex.html
@@ -3,14 +3,32 @@
 <head>
 	<title>Search Movies</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="movie.css">
 
 </head>
 <body>
+	<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand">MovieDetail</a>
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
+</nav>
+<br>
+<div class="jumbotron" style="height: 250px; width: 100%">
+  <h3>Search Movie OR Series!</h3>
+  <p class="lead">This is a simple sample project developed using Angularjs.</p>
+  <hr class="my-4">
+  <p>It will provide the detail of any movie which will be cesrch by the user.</p>
+</div>
+
+
 	<div ng-app="myApp">
 		<ng-view><ng-view>
 	</div>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
-	  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28//angular-route.min.js"></script>
-	  <script type="text/javascript" src="movieMain.js"></script>
+			
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28//angular-route.min.js"></script>
+<script type="text/javascript" src="movieMain.js"></script>
 </body>
 </html>
