--- a/viewMovies.html
+++ b/viewMovies.html
@@ -1,31 +1,9 @@
-<!-- <div class="container">
-	<h2> View Movie Detail</h2>
-	Search:
-	<br/>
-		<input type="text" ng-model="name" />
-	<br/>
-	<ul>
-		<li ng-repeat="student in students | filter:name">{{student.name}} , {{student.city}}</li>
-	</ul>
-
-	<ul>
-  <li ng-repeat="x in myData">
-    {{ x.Name + ', '}}
-  </li>
-</ul>
-
-	<a href="#/home"> Back</a>
-</div>
- -->
-
-
 
 <div class="container" style="text-align:center;">
 <div class="row">
    <div class="col-lg-12">
-      <h1>{{movie.Title}}</h1>
-      <img ng-src="{{movie.Poster}}" alt="">
-      <p>Year: {{movie.Year}}</p>
+      <img ng-src="{{movie.Poster}}" alt="" style="width: 300px; height: 300px; border-radius: 50%">
+<!--  <p>Year: {{movie.Year}}</p>
       <p>Released: {{movie.Released}}</p>
       <p>Genre: {{movie.Genre}}</p>
       <p>Writer: {{movie.Writer}}</p>
@@ -35,6 +13,25 @@
       <p>Type: {{movie.Type}}</p>
       <p>Total Seasons: {{movie.totalSeasons}}</p>
       <p ng-hide="movie.Runtime==0">Runtime:{{movie.Runtime}}</p> 
+      <div class="btn btn-dark"><a href="#/home"> Back</a></div> -->
+
+<br><br>
+    <div class="card" style="text-align: center;">
+  	<ul class="list-group list-group-flush">
+  	<li class="list-group-item"><h1>{{movie.Title}}</h1></li>
+    <li class="list-group-item"><p>Year: {{movie.Year}}</p></li>
+    <li class="list-group-item"><p>Released: {{movie.Released}}</p></li>
+    <li class="list-group-item"><p>Genre: {{movie.Genre}}</p></li>
+    <li class="list-group-item"><p>Writer: {{movie.Writer}}</p></li>
+    <li class="list-group-item"><p>Actors: {{movie.Actors}}</p></li>
+    <li class="list-group-item"><p>Director: {{movie.Director}}</p></li>
+    <li class="list-group-item"><p>Plot: {{movie.Plot}}</p></li>
+    <li class="list-group-item"><p>Type: {{movie.Type}}</p></li>
+    <li class="list-group-item"><p>Total Seasons: {{movie.totalSeasons}}</p></li>
+    <li class="list-group-item"><p ng-hide="movie.Runtime==0">Runtime:{{movie.Runtime}}</p> </li>
+    <li class="list-group-item"><div class="btn btn-dark" style="color: white"><a href="#/home" style="color: white;"> Back</a></div></li>
+  </ul>
+  </div>
    </div>
 </div>
 </div>
