--- a/movieHome.html
+++ b/movieHome.html
@@ -2,7 +2,7 @@
 	<h2>Welcome To Search Center</h2>
 	<h5>Search any movie and series for detail</h5>
 	<br><br>
- 	<input ng-model="id" type="text" id="id" class="search" ng-click="logId()">
+ 	<input ng-model="id" type="text" id="id" class="search">
  	<p>You search for: {{id}}</p>
- 	<div><a href="#/viewMovies" class="btn btn-success">Search</a></div>
+ 	<div><a href="#/viewMovies" class="btn btn-success" ng-click="logId()">Search</a></div>
 </div>
